syntax = "proto3";
package jrpc;
option go_package = "./jrpc";

message GoPBRpcRequestData{
  uint64 Seq            = 1;
  uint32 RpcMethodId    = 2;
  string ServiceMethod  = 3;
  bool   NoReply        = 4;
  bytes  InParam        = 5;
}

message GoPBRpcResponseData{
  uint64 Seq = 1;
  string Error = 2;
  bytes Reply = 3;
}
